[gd_scene load_steps=5 format=2]

[ext_resource path="res://steemWallet.gd" type="Script" id=1]
[ext_resource path="res://menu.tres" type="StyleBox" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://elements/OpenSeed.tscn" type="PackedScene" id=4]

[node name="steemWallet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -360.0
rect_min_size = Vector2( 800, 400 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProfileImg" type="TextureRect" parent="."]
margin_left = 9.52261
margin_top = 10.883
margin_right = 105.523
margin_bottom = 106.883
rect_min_size = Vector2( 96, 96 )
texture = ExtResource( 3 )
expand = true

[node name="Name" type="Label" parent="."]
margin_left = 120.0
margin_top = 14.0
margin_right = 272.0
margin_bottom = 39.0
text = "Name"
valign = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Discription" type="Label" parent="."]
margin_left = 120.0
margin_top = 45.0
margin_right = 791.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 0
text = "Discription"
valign = 2
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="HSeparator" type="HSeparator" parent="."]
anchor_right = 1.0
margin_top = 120.0
margin_bottom = 124.0
__meta__ = {
"_edit_lock_": true
}

[node name="OpenSeed" parent="." instance=ExtResource( 4 )]

[node name="Download" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 124.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Download"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -394.0
margin_top = -118.0
margin_right = 394.0
margin_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 21
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Label" parent="Download/VBoxContainer"]
margin_top = 11.0
margin_right = 788.0
margin_bottom = 25.0
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Download/VBoxContainer"]
margin_top = 46.0
margin_right = 788.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Download/VBoxContainer"]
margin_top = 71.0
margin_right = 788.0
margin_bottom = 136.0
text = "Thank you for showing your support of STEEM Musicians!

Please enter the amount below you feel the artist deserves for their hard work. Note: 90% of the proceeds will go to the artist where 10% goes to maintain the software and services."
autowrap = true

[node name="Control2" type="Control" parent="Download/VBoxContainer"]
margin_top = 157.0
margin_right = 788.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 32 )

[node name="payment" type="SpinBox" parent="Download/VBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -16.0
margin_right = 7.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 999.0
step = 0.01
align = 1

[node name="gratis" type="Label" parent="Download/VBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -11.0
margin_right = -70.0
margin_bottom = 3.0
text = "Give:"

[node name="OptionButton" type="OptionButton" parent="Download/VBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 9.20801
margin_top = -14.0
margin_right = 93.208
margin_bottom = 6.0
text = "STEEM"
items = [ "STEEM", null, false, 0, null, "SBD", null, false, 1, null ]
selected = 0

[node name="Control" type="Control" parent="Download/VBoxContainer"]
margin_top = 210.0
margin_right = 788.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 32 )

[node name="cancel" type="Button" parent="Download/VBoxContainer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 54.0
margin_bottom = 10.0
text = "Cancel"

[node name="download" type="Button" parent="Download/VBoxContainer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -10.0
margin_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "Tip"

[node name="steem_amount" type="Label" parent="."]
margin_left = 4.08222
margin_top = 124.323
margin_right = 44.0822
margin_bottom = 138.323
text = "0.00"

[node name="sbd_amount" type="Label" parent="."]
margin_left = 755.612
margin_top = 124.341
margin_right = 795.612
margin_bottom = 138.341
grow_horizontal = 0
grow_vertical = 0
text = "0.00"
align = 2

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 2.7016
margin_right = -56.0
margin_bottom = -65.2984
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/mnt/extended/Games/Thicket"
current_path = "/mnt/extended/Games/Thicket/"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="download" from="." to="." method="_on_steemWallet_download"]
[connection signal="visibility_changed" from="." to="." method="_on_steemWallet_visibility_changed"]
[connection signal="pressed" from="Download/VBoxContainer/Control/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Download/VBoxContainer/Control/download" to="." method="_on_download_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
